fix: consistent banner display in events with a banner showing for both mobile and regular versions with consistent spacing of the banner to the var(--space) definition.

--- a/assets/style.css
+++ b/assets/style.css
@@ -139,9 +139,6 @@ a:hover {
 	text-decoration-thickness: var(--_td-width);
 	text-underline-offset: var(--_td-offset);
 }
-img {
-	width: 100%;
-}
 header {
 	display: flex;
 	flex-direction: row;
